# LibGOODS

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.txt  README.md  README.rst  conda_requirements.txt  conda_requirements_test.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: linting.yaml  test.yaml
docs/: api.rst  conf.py  environment.yml  index.rst  subsetting.ipynb  whats_new.rst
libgoods/: .gitignore  README.rst  __init__.py  api.py  base.py  cli.py  conda_requirements.txt  conda_requirements_test.txt  currents.py  curv_model.py  data_model.py  data_models.py  data_sources.py  dummy_models.py  map.py  maps.py  model.py  model_fetch.py  performance.py  rect_model.py  roms_model.py  setup.cfg  sources.py  utilities.py
libgoods/current_sources/: __init__.py  hycom.json  hycom.py  tbofs.json  tbofs.py
libgoods/dummy_sources/: __init__.py
libgoods/file_processing/: __init__.py  base.py  curv_model.py  rect_model.py  roms_model.py
libgoods/libgoods/: __init__.py  api.py  cli.py  model_fetch.py
libgoods/scripts/: list_models.py
libgoods/tests/: test_api.py  test_currents.py  test_data_model.py  test_data_models.py  test_data_sources.py  test_map.py  test_model.py  test_utilities.py
libgoods_pkg/: conda_requirements.txt
model_catalogs/: README.md  environment.yml  setup.cfg
model_catalogs/ci/: environment-py3.8.yml  environment-py3.9.yml
model_catalogs/model_catalogs/: examples.py  model_catalogs.py  process.py  utils.py
scripts/: HYCOM_example.py  TBOFS_example.py  list_models.py
scripts/end-to-end-demo/: README.md  (+3 more)
(+45 files in other folders)
