[metadata]
name = libgoods
version = attr: libgoods.__version__
author = Amy MacFadyen, Christopher H. Barker
author_email = amy.macfadyen@noaa.gov, chris.barker@noaa.gov
description = Package for retrieving environmental data for GNOME
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/NOAA-ORR-ERD/libGOODS
project_urls =
    Bug Tracker = https://github.com/NOAA-ORR-ERD/libGOODS/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Meteorology/Oceanography


[options]
packages = find:
python_requires = >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    fetch-model = libgoods.cli:main
